--- a/localisation/TNO_Scotland_l_english_01.yml
+++ b/localisation/TNO_Scotland_l_english_01.yml
@@ -62,90 +62,90 @@
  SCO_UP_coup_long:0 "여왕 폐하의 가장 충성스러운 저항군-군국주의 파벌"
  SCO_Union_of_Britain:0 "브리튼 연방"
 
- SCO_SNP_President:0 "SNP President in Power"
- SCO_ILP_President:0 "ILP President in Power"
- SCO_UP_President:0 "UP President in Power"
- SCO_social_liberal_UK_SLP_long:0 "Socialist Labour Party - Liberal Party"
+ SCO_SNP_President:0 "SNP 대통령 집권"
+ SCO_ILP_President:0 "ILP 대통령 집권"
+ SCO_UP_President:0 "UP 대통령 집권"
+ SCO_social_liberal_UK_SLP_long:0 "사회노동당-자유당"
  SCO_social_liberal_UK_SLP:0 "SLP - Liberal Party"
- SCO_social_democrat_UK_SLP_long:0 "Socialist Labour Party - Moderate"
+ SCO_social_democrat_UK_SLP_long:0 "사회노동당-온건파"
  SCO_social_democrat_UK_SLP:0 "SLP - Moderate"
- SCO_socialist_UK_SLP_long:0 "Socialist Labour Party - Socialist"
+ SCO_socialist_UK_SLP_long:0 "사회노동당-사회주의자"
  SCO_socialist_UK_SLP:0 "SLP - Socialist"
- SCO_social_conservative_UK_SLP_long:0 "New Conservative Party"
+ SCO_social_conservative_UK_SLP_long:0 "신보수당"
  SCO_social_conservative_UK_SLP:0 "NCP"
 
- SCO_socialist_UK_ULP_long:0 "Socialist Labour Party - Socialist"
+ SCO_socialist_UK_ULP_long:0 "대통령 집권"
  SCO_socialist_UK_ULP:0 "SLP - Socialist"
- SCO_social_liberal_UK_ULP_long:0 "Liberal Party"
+ SCO_social_liberal_UK_ULP_long:0 "자유당"
  SCO_social_liberal_UK_ULP:0 "LP"
- SCO_social_democrat_UK_ULP_long:0 "Socialist Labour Party - Moderate"
+ SCO_social_democrat_UK_ULP_long:0 "사회노동당-온건파"
  SCO_social_democrat_UK_ULP:0 "SLP - Moderate"
- SCO_social_conservative_UK_ULP_long:0 "New Conservative Party"
+ SCO_social_conservative_UK_ULP_long:0 "신보수당"
  SCO_social_conservative_UK_ULP:0 "NCP"
 
 
- SCO_social_liberal_UK_FEN_ILP_long:0 "Liberal Party"
+ SCO_social_liberal_UK_FEN_ILP_long:0 "자유당"
  SCO_social_liberal_UK_FEN_ILP:0 "LP"
- SCO_social_democrat_UK_FEN_ILP_long:0 "Independent Labour Party"
+ SCO_social_democrat_UK_FEN_ILP_long:0 "독립노동당"
  SCO_social_democrat_UK_FEN_ILP:0 "ILP"
- SCO_social_conservative_UK_FEN_ILP_long:0 "New Conservative Party"
+ SCO_social_conservative_UK_FEN_ILP_long:0 "신보수당"
  SCO_social_conservative_UK_FEN_ILP:0 "NCP"
- SCO_socialist_UK_FEN_ILP_long:0 "British Socialist Party"
+ SCO_socialist_UK_FEN_ILP_long:0 "브리튼 사회당"
  SCO_socialist_UK_FEN_ILP:0 "BSP"
- SCO_communist_UK_FEN_ILP_long:0 "Communist Party of Britain"
+ SCO_communist_UK_FEN_ILP_long:0 "브리튼 노동당"
  SCO_communist_UK_FEN_ILP:0 "CPB"
- SCO_authoritarian_democrat_UK_FEN_ILP_long:0 "English National Party"
+ SCO_authoritarian_democrat_UK_FEN_ILP_long:0 "영국 국가주의당"
  SCO_authoritarian_democrat_UK_FEN_ILP:0 "ENP"
 
- SCO_social_liberal_UK_FEN_SNP_long:0 "Liberal Party"
+ SCO_social_liberal_UK_FEN_SNP_long:0 "자유당"
  SCO_social_liberal_UK_FEN_SNP:0 "LP"
- SCO_social_democrat_UK_FEN_SNP_long:0 "Independent Labour Party"
+ SCO_social_democrat_UK_FEN_SNP_long:0 "독립노동당"
  SCO_social_democrat_UK_FEN_SNP:0 "ILP"
- SCO_social_conservative_UK_FEN_SNP_long:0 "New Conservative Party"
+ SCO_social_conservative_UK_FEN_SNP_long:0 "신보수당"
  SCO_social_conservative_UK_FEN_SNP:0 "NCP"
- SCO_socialist_UK_FEN_SNP_long:0 "British Socialist Party"
+ SCO_socialist_UK_FEN_SNP_long:0 "브리튼 사회당"
  SCO_socialist_UK_FEN_SNP:0 "BSP"
- SCO_communist_UK_FEN_SNP_long:0 "Communist Party of Britain"
+ SCO_communist_UK_FEN_SNP_long:0 "브리튼 노동당"
  SCO_communist_UK_FEN_SNP:0 "CPB"
- SCO_authoritarian_democrat_UK_FEN_SNP_long:0 "English National Party"
+ SCO_authoritarian_democrat_UK_FEN_SNP_long:0 "영국 국가주의당"
  SCO_authoritarian_democrat_UK_FEN_SNP:0 "ENP"
 
  
 
 #cosmetic tags
 
- SCO_Union_of_Britain_social_liberal:0 "Union of Britain"
- SCO_Union_of_Britain_social_liberal_DEF:0 "Union of Britain"
- SCO_Union_of_Britain_social_democrat:0 "Union of Britain"
- SCO_Union_of_Britain_social_democrat_DEF:0 "Union of Britain"
- SCO_Union_of_Britain_despotism:0 "Union of Britain"
- SCO_Union_of_Britain_despotism_DEF:0 "Union of Britain"
- SCO_British_Republic_social_democrat:0 "British Republic"
- SCO_British_Republic_social_democrat_DEF:0 "British Republic"
- SCO_British_Republic_social_conservative:0 "British Republic"
- SCO_British_Republic_social_conservative_DEF:0 "British Republic"
- SCO_British_Republic_social_liberal:0 "British Republic"
- SCO_British_Republic_social_liberal_DEF:0 "British Republic"
- SCO_British_Republic_despotism:0 "British Republic"
- SCO_British_Republic_despotism:0 "British Republic"
+ SCO_Union_of_Britain_social_liberal:0 "브리튼 연방"
+ SCO_Union_of_Britain_social_liberal_DEF:0 "브리튼 연방"
+ SCO_Union_of_Britain_social_democrat:0 "브리튼 연방"
+ SCO_Union_of_Britain_social_democrat_DEF:0 "브리튼 연방"
+ SCO_Union_of_Britain_despotism:0 "브리튼 연방"
+ SCO_Union_of_Britain_despotism_DEF:0 "브리튼 연방"
+ SCO_British_Republic_social_democrat:0 "브리튼 공화국"
+ SCO_British_Republic_social_democrat_DEF:0 "브리튼 공화국"
+ SCO_British_Republic_social_conservative:0 "브리튼 공화국"
+ SCO_British_Republic_social_conservative_DEF:0 "브리튼 공화국"
+ SCO_British_Republic_social_liberal:0 "브리튼 공화국"
+ SCO_British_Republic_social_liberal_DEF:0 "브리튼 공화국"
+ SCO_British_Republic_despotism:0 "브리튼 공화국"
+ SCO_British_Republic_despotism:0 "브리튼 공화국"
  
  #Mayne Stuff
  
- FEN_Mayne_Progressive_Alliance:0 "Progressive"
- FEN_Mayne_Progressive_Alliance_long:0 "Progressive Alliance"
- FEN_mayne_british_republic_despotism:0 "British Republic"
- FEN_mayne_british_republic_despotism_DEF:0 "British Republic"
- FEN_mayne_british_republic_despotism_ADJ:0 "British Republic"
- FEN_mayne_british_republic_authoritarian_democrat:0 "British Republic"
- FEN_mayne_british_republic_authoritarian_democrat_DEF:0 "the British Republic"
- FEN_mayne_british_republic_authoritarian_democrat_ADJ:0 "British"
- FEN_mayne_british_republic_social_conservative:0 "British Republic"
- FEN_mayne_british_republic_social_conservative_DEF:0 "the British Republic"
- FEN_mayne_british_republic_social_conservative_ADJ:0 "British"
+ FEN_Mayne_Progressive_Alliance:0 "진보"
+ FEN_Mayne_Progressive_Alliance_long:0 "진보 연합"
+ FEN_mayne_british_republic_despotism:0 "브리튼 공화국"
+ FEN_mayne_british_republic_despotism_DEF:0 "브리튼 공화국"
+ FEN_mayne_british_republic_despotism_ADJ:0 "브리튼 공화국"
+ FEN_mayne_british_republic_authoritarian_democrat:0 "브리튼 공화국"
+ FEN_mayne_british_republic_authoritarian_democrat_DEF:0 "브리튼 공화국"
+ FEN_mayne_british_republic_authoritarian_democrat_ADJ:0 "브리튼"
+ FEN_mayne_british_republic_social_conservative:0 "브리튼 공화국"
+ FEN_mayne_british_republic_social_conservative_DEF:0 "브리튼 공화국"
+ FEN_mayne_british_republic_social_conservative_ADJ:0 "브리튼"
 
- SCO_military_administration_despotism:0 "Military Administration of Scotland"
- SCO_military_administration_despotism_ADJ:0 "Military Administration of Scotland"
- SCO_military_administration_despotism_DEF:0 "Military Administration of Scotland"
+ SCO_military_administration_despotism:0 "스코틀랜드 군정"
+ SCO_military_administration_despotism_ADJ:0 "스코틀랜드 군정"
+ SCO_military_administration_despotism_DEF:0 "스코틀랜드 군정"
 
  #tooltips
  SCO_Paranoias_reassign_them_tt:0 "We will move the Military Police to a different location, far from the capital."
